--- a/sass/layout/_cards.scss
+++ b/sass/layout/_cards.scss
@@ -1,15 +1,19 @@
 .cards {
 	margin-bottom: 20rem;
 	.container {
-		padding: 0 3.2rem;
+		padding: 0 8rem;
+		@include responsive(max-tablet) {
+			padding: 0 3.2rem;
+		}
 	}
 	&__list {
 		display: flex;
 		justify-content: center;
 		column-gap: 3rem;
 		row-gap: 4rem;
-		@include responsive(tablet) {
+		@include responsive(max-tablet) {
 			flex-direction: column;
+			align-items: center;
 		}
 	}
 
@@ -19,19 +23,20 @@
 		align-items: left;
 		max-width: 35rem;
 		position: relative;
-		@include responsive(tablet) {
+		@include responsive(max-tablet) {
 			flex-direction: row;
 			align-items: center;
-			max-width: 57.3rem;
+			width: 100%;
+			max-width: 57rem;
 			justify-content: space-between;
-			gap: 3rem;
+			column-gap: 3rem;
 		}
 		@include responsive(max-phone) {
 			flex-direction: column;
 			text-align: center;
 		}
 		&-info {
-			@include responsive(tablet) {
+			@include responsive(max-tablet) {
 				max-width: 40rem;
 			}
 		}
@@ -39,6 +44,11 @@
 			margin-bottom: 4rem;
 			width: 9.6rem;
 			height: 9.6rem;
+			@include responsive(max-phone) {
+				margin-bottom: 2.4rem;
+				width: 5.6rem;
+				height: 5.6rem;
+			}
 		}
 		&:last-child::before {
 			content: "";
@@ -50,7 +60,7 @@
 			position: absolute;
 			background-color: $light-grey;
 			z-index: -1;
-			@include responsive(tablet) {
+			@include responsive(max-tablet) {
 				height: 100vh;
 				width: 1.5rem;
 				top: auto;
@@ -59,9 +69,9 @@
 				left: 4.1rem;
 				bottom: 4rem;
 			}
-            @include responsive(max-phone){
-display: none;
-            }
+			@include responsive(max-phone) {
+				display: none;
+			}
 		}
 		&-title {
 			margin-bottom: 2.7rem;
