--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
 	margin-top: 9.6rem;
-    margin-bottom: 16rem;
+	margin-bottom: 16rem;
 	background-image: url("../images/svg/main-big-strel-left.svg"),
 		url("../images/svg/main-little-strel-left.svg"),
 		url("../images/png/hero.png");
@@ -20,11 +20,8 @@
 		background: rgb(47, 59, 89, 0.7);
 	}
 	.container {
-		padding: {
-			top: 15.3rem;
-			bottom: 15.3rem;
-		}
-		@include responsive(med-tablet) {
+		padding: 15.3rem 8rem;
+		@include responsive(max-tablet) {
 			padding: 15.3rem 3.2rem;
 			display: flex;
 			justify-content: center;
@@ -34,7 +31,7 @@
 	&__info {
 		max-width: 50rem;
 		width: 100%;
-		@include responsive(med-tablet) {
+		@include responsive(max-tablet) {
 			max-width: 57.3rem;
 			display: flex;
 			flex-direction: column;
@@ -56,9 +53,10 @@
 		margin-left: auto;
 		margin-bottom: 4rem;
 		max-width: 40.5rem;
-		@include responsive(med-tablet) {
+		@include responsive(max-tablet) {
 			max-width: 100%;
-			margin-left: 0;
+			margin-left: auto;
+			margin-right: auto;
 			width: 100%;
 		}
 	}
@@ -75,8 +73,8 @@
 	// }
 	&__btn {
 		margin-left: auto;
-		@include responsive(med-tablet) {
-			margin-left: 0;
+		@include responsive(max-tablet) {
+			margin: auto;
 		}
 	}
 }
