--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -14,6 +14,9 @@ body {
 	flex-direction: column;
 	height: 100%;
 }
+.main {
+	flex-grow: 1;
+}
 .container {
 	width: 100%;
 	max-width: 1440px;
@@ -29,4 +32,102 @@ a {
 ul,
 ol {
 	list-style: none;
+}
+.main-top {
+	margin-top: 9.6rem;
+	margin-bottom: 12rem;
+	@include responsive(min-tablet) {
+		margin-top: 6.4rem;
+	}
+	&__block {
+		&-info {
+			max-width: 111rem;
+			width: 100%;
+			margin: auto;
+		}
+		padding: 7.2rem 0;
+		background: rgb(47, 59, 89, 0.7);
+	}
+	.container {
+		padding: 0 8rem;
+		@include responsive(max-tablet) {
+			padding: 0 9.7rem;
+		}
+	}
+}
+.category {
+	.container {
+		padding: 0 8rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	&__title {
+		margin-bottom: 10rem;
+		@include responsive(max-phone) {
+			font-size: 3.2rem;
+		}
+	}
+	&__list {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		max-width: 111rem;
+		column-gap: 3rem;
+		margin-bottom: 12rem;
+		@include responsive(max-tablet) {
+			flex-direction: column;
+			row-gap: 5.5rem;
+		}
+	}
+	&__item {
+		max-width: 35rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		@include responsive(max-tablet) {
+			max-width: 45.7rem;
+		}
+		&-img {
+			border-radius: 50%;
+		}
+		&-block {
+			position: relative;
+			margin-bottom: 9rem;
+		}
+		&:first-child {
+			.category__item-block::after {
+				content: "01";
+			}
+		}
+		&-block::after {
+			content: "02";
+			font-size: 2.4rem;
+			line-height: 1.17rem;
+			letter-spacing: -1.1px;
+			font-weight: 700;
+			font-family: $space-mono;
+			width: 9.6rem;
+			height: 9.6rem;
+			background-color: $yellow;
+			color: $dark;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			position: absolute;
+			top: 19.9rem;
+			left: 7.2rem;
+			z-index: 10;
+			border-radius: 50%;
+		}
+		&:last-child {
+			.category__item-block::after {
+				content: "03";
+			}
+		}
+		&-title {
+			margin-bottom: 2.7rem;
+		}
+	}
 }
