--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "layout/hero";
 @import "layout/cards";
 @import "layout/offers";
+@import "layout/faq";
 @import "layout/footer";
 @import "layout/sidebar";
 @import "layout/forms";
