--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,12 @@ ol {
   margin-bottom: 2.7rem;
 }
 
+.btn {
+  display: inline-block;
+  width: 18rem;
+  height: 5.3rem;
+}
+
 body {
   font-size: 1.5rem;
   line-height: 1.67;
@@ -522,6 +528,9 @@ p {
   }
 }
 
+.faq {
+  margin-bottom: 12rem;
+}
 .faq .container {
   padding: 0 8rem;
   display: flex;
@@ -539,9 +548,16 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 4.8rem;
 }
 .faq__title {
   margin-bottom: 6.4rem;
+}
+@media screen and (max-width: 550px) {
+  .faq__title {
+    font-size: 3.2rem;
+    margin-bottom: 1.8rem;
+  }
 }
 .faq__wrap {
   display: flex;
@@ -549,7 +565,6 @@ p {
   justify-content: space-between;
   column-gap: 3rem;
   row-gap: 3.2rem;
-  margin-bottom: 6.4rem;
 }
 @media screen and (max-width: 970px) {
   .faq__wrap {
@@ -560,6 +575,14 @@ p {
 .faq__wrap-title {
   max-width: 35rem;
   width: 100%;
+}
+@media screen and (max-width: 550px) {
+  .faq__wrap-title {
+    max-width: 31.1rem;
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    text-align: center;
+  }
 }
 .faq__list {
   max-width: 73rem;
@@ -577,13 +600,24 @@ p {
   justify-content: center;
   background-color: #f2f5f9;
 }
+@media screen and (max-width: 550px) {
+  .faq__item {
+    padding: 3.2rem 2.8rem;
+  }
+}
 .faq__item .title-srel {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: 2rem;
+  column-gap: 0.5rem;
   width: 100%;
   margin-bottom: 2.4rem;
+}
+@media screen and (max-width: 550px) {
+  .faq__item-title {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+  }
 }
 
 .streltop {
@@ -597,6 +631,207 @@ p {
 .strelbottom,
 .streltop:hover {
   cursor: pointer;
+}
+
+.job {
+  margin-bottom: 16rem;
+}
+.job .container {
+  padding: 0 8rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+@media screen and (max-width: 970px) {
+  .job .container {
+    padding: 0 4rem;
+  }
+}
+@media screen and (max-width: 740px) {
+  .job .container {
+    padding: 0 3.2rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .job .container {
+    padding: 0 3.2rem;
+  }
+}
+.job__list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  max-width: 111rem;
+  row-gap: 2.4rem;
+  width: 100%;
+}
+.job__item {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3.2rem 6.4rem 3.5rem 4rem;
+  column-gap: 1rem;
+  background-color: #f2f5f9;
+}
+@media screen and (max-width: 970px) {
+  .job__item {
+    padding: 3.2rem 4.8rem 3.5rem 4rem;
+  }
+}
+@media screen and (max-width: 740px) {
+  .job__item {
+    padding: 3.2rem 3rem 3.5rem 3rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .job__item {
+    flex-direction: column;
+    text-align: center;
+    row-gap: 1.6rem;
+  }
+}
+.job__item-info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.8rem;
+}
+@media screen and (max-width: 550px) {
+  .job__item-info {
+    row-gap: 0.4rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .job__item-type {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+  }
+}
+
+.map {
+  margin-bottom: 12rem;
+}
+.map .container {
+  padding: 0 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (max-width: 970px) {
+  .map .container {
+    padding: 0 4rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .map .container {
+    padding: 0 3.2rem;
+  }
+}
+.map__img {
+  width: 100%;
+  max-width: 111rem;
+  height: inherit;
+  margin-bottom: 12rem;
+}
+@media screen and (max-width: 550px) {
+  .map__img {
+    display: none;
+    margin-bottom: 4rem;
+  }
+}
+.map__mini-img {
+  width: 100%;
+  height: inherit;
+  display: none;
+}
+@media screen and (max-width: 550px) {
+  .map__mini-img {
+    margin-bottom: 4rem;
+    display: block;
+  }
+}
+.map .cities {
+  display: none;
+  max-width: 31.1rem;
+  width: 100%;
+  margin-bottom: 7.2rem;
+}
+@media screen and (max-width: 550px) {
+  .map .cities {
+    display: block;
+  }
+}
+.map .cities__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.6rem;
+  align-items: center;
+}
+.map .cities__item {
+  width: 100%;
+}
+.map .cities__link {
+  display: inline-block;
+  padding: 2.2rem 0;
+  text-align: center;
+  width: 100%;
+  background-color: #fff4df;
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  font-family: "Space Mono", "Arial", sans-serif;
+  color: #495567;
+  font-weight: 700;
+}
+.map__info {
+  max-width: 111rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 1.6rem;
+  row-gap: 3.2rem;
+}
+@media screen and (max-width: 970px) {
+  .map__info {
+    flex-direction: column;
+    max-width: 57.3rem;
+    text-align: center;
+  }
+}
+.map__info-block {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 3rem;
+  row-gap: 3.2rem;
+}
+@media screen and (max-width: 970px) {
+  .map__info-block {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.map__info-title {
+  max-width: 35.2rem;
+  width: 100%;
+}
+@media screen and (max-width: 970px) {
+  .map__info-title {
+    max-width: 46rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .map__info-title {
+    font-size: 3.2rem;
+  }
+}
+.map__info-subt {
+  max-width: 44.5rem;
+  width: 100%;
+}
+@media screen and (max-width: 970px) {
+  .map__info-subt {
+    max-width: 100%;
+  }
 }
 
 .footer__header {
@@ -739,10 +974,9 @@ p {
   height: 5.3rem;
   background-color: #fcb72b;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  padding: 1.4rem 3.9rem;
 }
 
 .btn:hover {
