--- a/sass/layout/_faq.scss
+++ b/sass/layout/_faq.scss
@@ -1,9 +1,11 @@
 .faq {
+	margin-bottom: 12rem;
 	.container {
 		padding: 0 8rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
 		@include responsive(max-tablet) {
 			padding: 0 3.2rem;
 		}
@@ -14,9 +16,14 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		row-gap: 4.8rem;
 	}
 	&__title {
 		margin-bottom: 6.4rem;
+		@include responsive(max-phone) {
+			font-size: 3.2rem;
+			margin-bottom: 1.8rem;
+		}
 	}
 	&__wrap {
 		display: flex;
@@ -24,15 +31,20 @@
 		justify-content: space-between;
 		column-gap: 3rem;
 		row-gap: 3.2rem;
-		margin-bottom: 6.4rem;
 		@include responsive(max-tablet) {
 			flex-direction: column;
-            align-items: center;
+			align-items: center;
 		}
 
 		&-title {
 			max-width: 35rem;
 			width: 100%;
+			@include responsive(max-phone) {
+				max-width: 31.1rem;
+				font-size: 2.4rem;
+				line-height: 2.8rem;
+				text-align: center;
+			}
 		}
 	}
 	&__list {
@@ -50,13 +62,22 @@
 		flex-direction: column;
 		justify-content: center;
 		background-color: $snow;
+		@include responsive(max-phone) {
+			padding: 3.2rem 2.8rem;
+		}
 		.title-srel {
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			column-gap: 2rem;
+			column-gap: 0.5rem;
 			width: 100%;
 			margin-bottom: 2.4rem;
+		}
+		&-title {
+			@include responsive(max-phone) {
+				font-size: 1.8rem;
+				line-height: 2.4rem;
+			}
 		}
 	}
 }
