--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,8 @@
 @import "layout/cards";
 @import "layout/offers";
 @import "layout/faq";
+@import "layout/jobs";
+@import "layout/map.scss";
 @import "layout/footer";
 @import "layout/sidebar";
 @import "layout/forms";
