--- a/css/main.css
+++ b/css/main.css
@@ -49,14 +49,29 @@ ol {
     margin-top: 6.4rem;
   }
 }
+.main-top__title {
+  color: white;
+}
+@media screen and (max-width: 550px) {
+  .main-top__title {
+    font-size: 4rem;
+  }
+}
 .main-top__block {
   padding: 7.2rem 0;
-  background: rgba(47, 59, 89, 0.7);
 }
 .main-top__block-info {
   max-width: 111rem;
   width: 100%;
   margin: auto;
+}
+@media screen and (max-width: 550px) {
+  .main-top__block-info {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .main-top .container {
   padding: 0 8rem;
@@ -148,6 +163,20 @@ ol {
   display: inline-block;
   width: 18rem;
   height: 5.3rem;
+}
+
+.about-bg {
+  background-image: url("../../images/svg/oval-full.svg"), url("../../images/svg/oval.svg"), url("../../images/svg/oval.svg"), url("../../images/png/hero-bg.png"), url("../../images/png/about.png");
+  background-repeat: no-repeat;
+  background-size: 62px 62px, 62px 62px, 62px 62px, cover, cover;
+  background-position: right -3.1rem center, right 5.5rem center, right 14.1rem center, center, center;
+}
+
+.career-bg {
+  background-image: url("../../images/svg/oval-full.svg"), url("../../images/svg/oval.svg"), url("../../images/svg/oval.svg"), url("../../images/png/hero-bg.png"), url("../../images/png/career.png");
+  background-repeat: no-repeat;
+  background-size: 62px 62px, 62px 62px, 62px 62px, cover, cover;
+  background-position: right -3.1rem center, right 5.5rem center, right 14.1rem center, center, center;
 }
 
 body {
@@ -289,23 +318,25 @@ p {
 .hero {
   margin-top: 9.6rem;
   margin-bottom: 16rem;
-  background-image: url("../images/svg/main-big-strel-left.svg"), url("../images/svg/main-little-strel-left.svg"), url("../images/png/hero.png");
+  background-image: url("../images/svg/main-big-strel-left.svg"), url("../images/svg/main-little-strel-left.svg"), url("../images/png/hero-bg.png"), url("../images/png/hero.png");
   background-repeat: no-repeat;
-  background-size: 74rem 15rem, 44.7rem 13.8rem, cover;
-  background-position: left -54rem top 35rem, top 35rem right 28.8rem, center right;
+  background-size: 74rem 15rem, 44.7rem 13.8rem, cover, cover;
+  background-position: left -54rem top 35rem, top 35rem right 28.8rem, center, center;
 }
 @media screen and (max-width: 768px) {
   .hero {
-    background-position: left -54rem top 35rem, top 35rem right 28.8rem, center right -20rem;
+    background-position: left -540rem top 35rem, top 45rem right 28.8rem, center, center right -20rem;
+  }
+}
+@media screen and (max-width: 375px) {
+  .hero {
+    background-position: left -540rem top 35rem, top 45rem right 28.8rem, center, center left -105rem;
   }
 }
 @media screen and (max-width: 740px) {
   .hero {
     margin-top: 6.4rem;
   }
-}
-.hero__block {
-  background: rgba(47, 59, 89, 0.7);
 }
 .hero .container {
   padding: 15.3rem 8rem;
@@ -462,6 +493,63 @@ p {
   margin-bottom: 2.7rem;
 }
 
+.offers {
+  position: relative;
+  background-image: url("../images/svg/ellipse.svg"), url("../images/svg/ellipse.svg"), url("../images/svg/ellipse.svg"), url("../images/svg/ellipse.svg");
+  background-repeat: no-repeat;
+  background-position: right -35rem top 0, left -35rem top 60.5rem, right -35rem top 120rem;
+  background-size: 445px 445px;
+}
+@media screen and (max-width: 970px) {
+  .offers {
+    background-repeat: no-repeat;
+    background-position: right -36rem top 0, left -36rem top 94rem, right -36rem top 190rem;
+    background-size: 445px 445px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .offers {
+    background: none;
+  }
+}
+.offers::after {
+  content: "";
+  position: absolute;
+  width: 70rem;
+  height: 30rem;
+  color: red;
+  background-image: url("../images/svg/main-big-strel-left.svg");
+  background-repeat: no-repeat;
+  top: 30rem;
+  right: 0;
+}
+.offers::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: red;
+  top: 0;
+  left: 0;
+  background-image: url("../images/svg/main-big-strel-right.svg"), url("../images/svg/main-big-strel-left.svg"), url("../images/svg/main-big-strel-left.svg");
+  background-position: left -40rem top 63rem, right 0 top 30rem, right -40rem top 129.5rem;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 970px) {
+  .offers::after {
+    background-position: left -40rem top 95rem, right 0 top 30rem, right -37rem top 195.5rem;
+  }
+}
+@media screen and (max-width: 740px) {
+  .offers::after {
+    background-position: left -45rem top 95rem, right -25rem top 25rem, right -37rem top 190.5rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .offers::after {
+    background-position: left -45rem top 85rem, right -37rem top 15rem, right -37rem top 170.5rem;
+  }
+}
 .offers .container {
   padding: 0 8rem;
 }
@@ -836,7 +924,10 @@ p {
 
 .footer__header {
   padding: 10.2rem 0;
-  background-color: #495567;
+  background-image: url("../images/svg/opacity-circle.svg"), url("../images/svg/opacity-circle.svg"), url("../images/svg/opacity-round.svg"), url("../images/png/footer-header.png");
+  background-repeat: no-repeat;
+  background-position: bottom -17.4rem right 64.3rem, bottom -17.4rem right 24rem, bottom -17.4rem right -15rem, center;
+  background-size: auto, auto, auto, cover;
 }
 .footer__header .container {
   padding: 0 8rem;
