--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -157,6 +157,10 @@ ol {
 	background-size: 62px 62px, 62px 62px, 62px 62px, cover, cover;
 	background-position: right -3.1rem center, right 5.5rem center,
 		right 14.1rem center, center, center;
+	@include responsive(max-phone) {
+		background-position: right -31rem center, right -55rem center,
+			right -14.1rem center, center, center;
+	}
 }
 .career-bg {
 	background-image: url("../../images/svg/oval-full.svg"),
