--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -149,6 +149,9 @@ ol {
 	width: 18rem;
 	height: 5.3rem;
 }
+.subt-hidden{
+	display: none;
+}
 .about-bg {
 	background-image: url("../../images/svg/oval-full.svg"),
 		url("../../images/svg/oval.svg"), url("../../images/svg/oval.svg"),
